# gdnative_cpp_example

./: .gitignore  CMakeLists.txt  README.md
demo/: main.gd  main.tscn  pingfang.tres
src/: gdexample.cpp  gdexample.h
